fix: add cluster-commons + Redis dependency to ALL 22 services
Problem: 11 services had no jira-cluster-commons dependency (missing
circuit breakers, tracing, logging, health indicators). Redis was
marked <optional> in cluster-commons so not transitive — 19 services
lacked Redis on their classpath.

Fix:
- Added jira-cluster-commons to 11 services: auth, comment, search,
  audit, admin, version, component, dashboard, report, portal, document
- Added spring-boot-starter-data-redis to 19 services (all except
  issue/migration/gateway which already had it)
- Created application-docker.yml with Redis config for 11 new services
- All 22 services now compile with full cluster infrastructure

Verification: 23 POMs have cluster-commons, 23 POMs have Redis,
20 services have Redis docker config. Zero services missing.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>